# compiler

./: .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  ast_parser.cpp  ast_parser.h  c.cpp  c.h  c.lex  c.y++  codegen.cpp  codegen.h  example.lc  lexer.h  main.cpp
ast/: l.cpp  l.h
examples/: Makefile  alloca_while.lc  arg_var.lc  calls.lc  fact.lc  fact.test  fact_accum.lc  fact_tco.lc  fib.lc  fun_defs.lc  func_pointer.lc  func_pointer.test  globals.lc  local_while.lc  locals.lc  pointer.lc  pointer.test  pointer_pointer.lc  pointer_pointer.test  scope.lc  scope.test  semantic_subscope.lc  stack_overflow.lc  while.lc  write.lc
lcc/: CMakeLists.txt  lcc.cpp  lcc.h  main.cpp
optimise/: CMakeLists.txt  accum.cpp  common.cpp  l.cpp  l.h  recursive.h  tco.cpp
parse/: CMakeLists.txt  Makefile  l.h  l.lex  l.y++  lexer.h  parser.cpp  parser.h
parse/ast/: decl.h  expr.h  l.cpp  l.h  statement.h  types.h
sem/: CMakeLists.txt  ctx.h  error.h  func.h  l.cpp  l.h  types.cpp  types.h
testing/: CMakeLists.txt  common.cpp  common.h  main.cpp  optimisations.cpp  semantic.cpp
utils/: CMakeLists.txt  fmap.h  string.h  top.h
